failed attempt to fix team page/photo being too close to text

--- a/css/style.css
+++ b/css/style.css
@@ -43,7 +43,7 @@ a {
 	color:#333;
 }
 
-.team-text{
+p.team-text{
   color: #000;
   padding: 5px;
   margin: 10px;
